--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -14,14 +14,13 @@
 
     <nav id="sidebar">
 
-
         <form id="search-form" method="POST">
 
             <div class="sidebar-header d-flex justify-content-center">
                 <h4>Search Users</h4>
             </div>
 
-            <h5 class="filter-header skills-header"><i class="fas fa-code"></i> Skills</h5>
+            <h5 class="filter-header skills-header"><i class="fas fa-code"></i> Skills</h5> <small>tanDev will display users who know at least one skill selected.</small>
 
             <div class="row skill-column">
                 {% for skill in skills %}
@@ -47,7 +46,6 @@
 
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" name="skill" value="{{skill}}" id="skill-box">
-
                         <label class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
@@ -58,205 +56,149 @@
 
                 {% endfor %}
 
-                <!-- The following select classes rely on the bootstrap-select library: https://developer.snapappointments.com/bootstrap-select/ -->
-
-                <div class="row top-filter-row">
 
 
-                    <!-- District filter option header -->
+            </div>
 
-                    <div class="col-12 col-md-6">
+            <!-- The following select classes rely on the bootstrap-select library: https://developer.snapappointments.com/bootstrap-select/ -->
 
-                        <h5 class="filter-header"><i class="fas fa-location-arrow"></i> District</h5>
-
-                    </div>
-
-                    <!-- District filter options -->
-
-                    <div class="col-12 col-md-6">
+            <div class="row top-filter-row">
 
 
+                <!-- District filter option header -->
 
+                <div class="col-12 col-md-6">
 
-                        <select class="selectpicker districtSelect" id="districtSelect" multiple
-                            data-selected-text-format="count">
-                            <option value="Mitte">Mitte</option>
-                            <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
-                            <option value="Pankow">Pankow</option>
-                            <option value="Charlottenburg-Wilmersdorf">Charlottenburg-Wilmersdorf</option>
-                            <option value="Spandau">Spandau</option>
-                            <option value="Steglitz-Zehlendorf">Steglitz-Zehlendorf</option>
-                            <option value="Tempelhof-Schöneberg">Tempelhof-Schöneberg</option>
-                            <option value="Neukölln">Neukölln</option>
-                            <option value="Treptow-Köpenick">Treptow-Köpenick</option>
-                            <option value="Marzahn-Hellersdorf">Marzahn-Hellersdorf</option>
-                            <option value="Lichtenberg">Lichtenberg</option>
-                            <option value="Reinickendorf">Reinickendorf</option>
-                        </select>
-
-
-                        <button class="refresh" id="districtRefresh"><i class="fas fa-times"></i></button>
-                    </div>
+                    <h5 class="filter-header"><i class="fas fa-location-arrow"></i> District</h5>
 
                 </div>
 
-                <!-- Communication filter option header -->
+                <!-- District filter options -->
 
-                <div class="div filter-row">
+                <div class="col-12 col-md-6">
 
-                    <div class="row">
 
-                        <div class="col-12">
 
-                            <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5>
 
-                        </div>
-                    </div>
+                    <select class="selectpicker districtSelect" id="districtSelect" name="district" multiple
+                        data-selected-text-format="count">
+                        <option value="Mitte">Mitte</option>
+                        <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
+                        <option value="Pankow">Pankow</option>
+                        <option value="Charlottenburg-Wilmersdorf">Charlottenburg-Wilmersdorf</option>
+                        <option value="Spandau">Spandau</option>
+                        <option value="Steglitz-Zehlendorf">Steglitz-Zehlendorf</option>
+                        <option value="Tempelhof-Schöneberg">Tempelhof-Schöneberg</option>
+                        <option value="Neukölln">Neukölln</option>
+                        <option value="Treptow-Köpenick">Treptow-Köpenick</option>
+                        <option value="Marzahn-Hellersdorf">Marzahn-Hellersdorf</option>
+                        <option value="Lichtenberg">Lichtenberg</option>
+                        <option value="Reinickendorf">Reinickendorf</option>
+                    </select>
 
-                    <!-- Communication filter options -->
 
-                    <div class="row">
-
-                        <div class="col-12 col-md-3 filtercol">
-
-                            <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" name="commstyle" id="text" type="checkbox">
-                                <label class="form-check-label" for="text">
-                                    Text
-                                </label>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12 col-md-3 filtercol">
-                            <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" name="commstyle" id="video" type="checkbox">
-                                <label class="form-check-label" for="video">
-                                    Video
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12 col-md-3 filtercol">
-                            <div class="form-check abc-checkbox">
-                                <input class="form-check-input" name="commstyle" id="inperson" type="checkbox">
-                                <label class="form-check-label" for="inperson">
-                                    In person
-                                </label>
-                            </div>
-
-                        </div>
-                    </div>
-
+                    <button class="refresh" id="districtRefresh"><i class="fas fa-times"></i></button>
                 </div>
 
-                <!-- Other filter option header -->
+            </div>
 
-                <div class="div filter-row">
+            <!-- Communication filter option header -->
 
-                    <div class="row">
+            <div class="div filter-row">
 
+                <div class="row">
 
+                    <div class="col-12">
 
-                        <div class="col-12">
+                        <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5> <small> tanDev will display users open to all the styles selected.</small>
 
-
-                            <h5 class="filter-header"><i class="fas fa-question"></i> Other</h5>
-
-                        </div>
-                    </div>
-
-                    <!-- Other filter options -->
-
-                    <div class="row">
-                        <div class="col-12 filtercol">
-
-                            <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" name="other" id="lookingForCoFounder" type="checkbox">
-                                <label class="form-check-label" for="lookingForCoFounder">
-                                    Looking for Co-Founder
-                                </label>
-                            </div>
-
-
-                            <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" name="other" id="availableForHir" type="checkbox">
-                                <label class="form-check-label" for="availableForHir">
-                                    Available for Hire
-                                </label>
-                            </div>
-
-
-                            <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" name="other" id="availableForProjects" type="checkbox">
-                                <label class="form-check-label" for="availableForProjects">
-                                    Available for Projects
-                                </label>
-                            </div>
-
-                        </div>
                     </div>
                 </div>
 
-                <div class="row justify-content-center">
-                    <button type="submit" class="btn btn-primary btn-large search-btn mt-5 mb-5" name="btn"
-                        value="search">Search Now</button>
+                <!-- Communication filter options -->
+
+                <div class="row">
+
+                    {% for commstyle in commstyles %}
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="commstyle" value="{{commstyle}}"
+                            id="comm-box">
+                        <label class="form-check-label" for="skill-box">
+                            {{commstyle}}
+                        </label>
+                    </div>
+                    {% endfor %}
                 </div>
+
+
+            </div>
+
+            <div class="row justify-content-center">
+                <button type="submit" class="btn btn-primary btn-large search-btn mt-5 mb-5" name="btn"
+                    value="search">Search Now</button>
+            </div>
         </form>
 
     </nav>
 
-
-
-
-
-
     <!-- End Sidebar -->
 
-    <h5>{{ profile_count }} Profiles Found.</h5>
+    <!-- Begin Content -->
 
-    <div class="card-deck">
+    <div id="content">
 
-        <div class="row search-row justify-content-center">
+        {% if profile_count == 0 %}
 
-            {% for profile in profiles %}
-            {% if loop.index % 2 == 1 %}
-            <div class="col-12 col-md-6 d-none d-md-block justify-content-center">
-                {% include 'components/profile_card.html' %}
+        <h5> No profiles of {{ all_profile_count }} found.</h5>
+
+        {% endif %}
+
+        {% if profile_count == 1 %}
+
+        <h5> 1 profile of  {{ all_profile_count }} found.</h5>
+        {% endif %}
+
+        {% if profile_count > 1 %}
+
+        <h5>{{ profile_count }} profiles of {{ all_profile_count }} found.</h5>
+
+        {% endif %}
+
+        <div class="card-deck">
+
+
+            <div class="row search-row justify-content-center">
+
+                {% for profile in profiles %}
+                {% if loop.index % 2 == 1 %}
+                <div class="col-12 col-md-6 d-none d-md-block justify-content-center">
+                    {% include 'components/profile_card.html' %}
+                </div>
+
+                {% endif %}
+
+                {% if loop.index % 2 == 0 %}
+                <div class="col-12 col-md-6 justify-content-center">
+                    {% include 'components/profile_card.html' %}
+                </div>
+                {% endif %}
+                {% endfor %}
             </div>
 
-            {% endif %}
-
-            {% if loop.index % 2 == 0 %}
-            <div class="col-12 col-md-6 justify-content-center">
-                {% include 'components/profile_card.html' %}
-            </div>
-            {% endif %}
-            {% endfor %}
         </div>
+
+
 
     </div>
 
+    <!-- End Content -->
+
+    <!-- Dark Overlay element -->
+    <div class="search-overlay"></div>
 
 
 </div>
-
-<!-- End Content -->
-
-<!-- Dark Overlay element -->
-<div class="search-overlay"></div>
-
-
-</div>
-
-
-
-
-
 
 
 {% endblock %}
