Get basic pagination to work

--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -200,3 +200,21 @@ ul ul a {
     display: block;
     opacity: 1;
 }
+
+// Styling for the pagination pages from flask-paginate taken from https://pythonhosted.org/Flask-paginate/
+
+.pagination-page-info {
+    padding: .6em;
+    padding-left: 0;
+    width: 40em;
+    margin: .5em;
+    margin-left: 0;
+    font-size: 12px;
+}
+.pagination-page-info b {
+    color: black;
+    background: #6aa6ed;
+    padding-left: 2px;
+    padding: .1em .25em;
+    font-size: 150%;
+}
