--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -20,7 +20,8 @@
                 <h4>Search Users</h4>
             </div>
 
-            <h5 class="filter-header skills-header"><i class="fas fa-code"></i> Skills</h5> <small>tanDev will display users who know at least one skill selected.</small>
+            <h5 class="filter-header skills-header"><i class="fas fa-code"></i> Skills</h5> <small>tanDev will display
+                users who know at least one skill selected.</small>
 
             <div class="row skill-column">
                 {% for skill in skills %}
@@ -110,7 +111,8 @@
 
                     <div class="col-12">
 
-                        <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5> <small> tanDev will display users open to all the styles selected.</small>
+                        <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5> <small> tanDev will
+                            display users open to all the styles selected.</small>
 
                     </div>
                 </div>
@@ -156,7 +158,7 @@
 
         {% if profile_count == 1 %}
 
-        <h5> 1 profile of  {{ all_profile_count }} found.</h5>
+        <h5> 1 profile of {{ all_profile_count }} found.</h5>
         {% endif %}
 
         {% if profile_count > 1 %}
@@ -170,7 +172,16 @@
 
             <div class="row search-row justify-content-center">
 
+                <div class="col-12">
+
+                    {{ pagination.links }}
+                </div>
+
+
                 {% for profile in profiles %}
+
+                <!-- {{ loop.index + (page - 1) * per_page }} -->
+
                 {% if loop.index % 2 == 1 %}
                 <div class="col-12 col-md-6 d-none d-md-block justify-content-center">
                     {% include 'components/profile_card.html' %}
@@ -185,7 +196,6 @@
                 {% endif %}
                 {% endfor %}
             </div>
-
         </div>
 
 
