Pagination works for all profile display.

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -173,6 +173,12 @@
 
                 <div class="col-12">
 
+                    <a href={{ prev_url }}> Previous  </a>
+
+
+                    <a href={{ next_url }}> Next </a>
+                    
+                
                 </div>
 
 
