remove search_param variable.

--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -44,7 +44,7 @@
                 </li>
 
                 <li class="nav-item main-nav-item" id="navSearch">
-                    <a class="nav-link hvr-bounce-in" href="{{url_for('search', page_number = 1, search_param=1)}}" id="navSearchLink">Search</a>
+                    <a class="nav-link hvr-bounce-in" href="{{url_for('search', page_number = 1)}}" id="navSearchLink">Search</a>
                 </li>
 
                 <!-- If the user is logged in, they see the "Login/Register" navbar item.
