--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -42,6 +42,10 @@
     transition: all 1s ease;
 }
 
+#sidebarCollapse:hover {
+    background-color: $redbrown;
+}
+
 #sidebar.active {
     margin-left: -80vw;
     transition: all 1s ease;
@@ -166,6 +170,16 @@ ul ul a {
 
 #clear-btn {
     background-color: $pink;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    margin-left: 5vw;
+}
+
+#clear-btn:hover {
+    background-color: $redbrown;
 }
 
 .search-btn:hover {
