--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -18,7 +18,10 @@
             <i class="fas fa-align-left"></i>
             <span>Toggle Filters</span>
         </button>
-
+        <form action="" method="POST">
+            <button type="submit" id="clear-btn" class="btn btn-info" name="btn"
+                value="clear"><i class="fas fa-redo-alt"></i> Clear Filters</button>
+        </form>
 
 
         {% endif %}
@@ -44,7 +47,8 @@
                 </li>
 
                 <li class="nav-item main-nav-item" id="navSearch">
-                    <a class="nav-link hvr-bounce-in" href="{{url_for('search', page_number = 1)}}" id="navSearchLink">Search</a>
+                    <a class="nav-link hvr-bounce-in" href="{{url_for('search', page_number = 1)}}"
+                        id="navSearchLink">Search</a>
                 </li>
 
                 <!-- If the user is logged in, they see the "Login/Register" navbar item.
@@ -62,15 +66,17 @@
 
                 <li class="nav-item dropdown main-nav-item" id="navAccount">
                     <a class="nav-link hvr-bounce-in dropdown-toggle"
-                        href="{{url_for('profile', username=session['username'])}}" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="navAccount">
+                        href="{{url_for('profile', username=session['username'])}}" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false" id="navAccount">
                         My Account</a>
 
                     <div class="dropdown-menu" id="account-dropdown" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" id="dropdownProfile"
-                            href="{{url_for('profile', username=session['username'])}}"><i class="fas fa-users"></i> My Profile</a>
+                            href="{{url_for('profile', username=session['username'])}}"><i class="fas fa-users"></i> My
+                            Profile</a>
                         <a class="dropdown-item" href="{{url_for('settings')}}"><i class="fas fa-cog"></i> Settings</a>
-                        <a class="dropdown-item" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                        <a class="dropdown-item" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt"></i>
+                            Logout</a>
                     </div>
                 </li>
 
