--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -86,7 +86,7 @@
                         <option value="Mitte">Mitte</option>
                         <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
                         <option value="Pankow">Pankow</option>
-                        <option value="Charlottenburg-Wilmersdorf">Charlottenburg-Wilmersdorf</option>
+                        <option value="Charlottenburg">Charlottenburg-Wilmersdorf</option>
                         <option value="Spandau">Spandau</option>
                         <option value="Steglitz-Zehlendorf">Steglitz-Zehlendorf</option>
                         <option value="Tempelhof-Schöneberg">Tempelhof-Schöneberg</option>
