--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -241,3 +241,13 @@ ul ul a {
 .disabled {
     color: gray;
 }
+
+.matches {
+    background-color: $brightmidblue;
+    color: white;
+    padding: 0.5rem;
+}
+
+.results {
+    margin: 4rem;
+}
