--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -31,7 +31,8 @@
                 <div class="col-6">
 
                     <div class="form-check">
-                        <input class="form-check-input search-card" type="checkbox" name="skill" value="{{skill}}" id="skill-box">
+                        <input class="form-check-input search-card" type="checkbox" name="skill" value="{{skill}}"
+                            id="skill-box">
                         <label class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
@@ -46,7 +47,8 @@
                 <div class="col-6">
 
                     <div class="form-check">
-                        <input class="form-check-input search-card" type="checkbox" name="skill" value="{{skill}}" id="skill-box">
+                        <input class="form-check-input search-card" type="checkbox" name="skill" value="{{skill}}"
+                            id="skill-box">
                         <label class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
@@ -152,25 +154,28 @@
 
     <div id="content">
 
-        {% if profile_count == 0 %}
+        <div class="results">
 
-        <h5> No profiles of {{ all_profile_count }} found.</h5>
+            {% if profile_count == 0 %}
 
-        {% endif %}
+            <h5> No profiles of {{ all_profile_count }} found.</h5>
 
-        {% if profile_count == 1 %}
+            {% endif %}
 
-        <h5> 1 profile of found, displaying match 1 - 1</h5>
-        {% endif %}
+            {% if profile_count == 1 %}
 
-        {% if profile_count > 1 %}
+            <h5> <span class="matches">1</span> profile of found, displaying match <span class="matches">1 - 1</span></h5>
+            {% endif %}
 
-        <h5><span class="search-matches">{{ profile_count }}</span> matches found, displaying {{first_profile}} - {{last_profile}}</h5>
-            
-         <h6> Page {{page_number}} of {{total_pages}}.</h6>
+            {% if profile_count > 1 %}
 
-        {% endif %}
+            <h5><span class="matches">{{ profile_count }}</span> matches found, displaying <span class="matches">{{first_profile}} -
+                {{last_profile}}</span></h5>
 
+            <h6> Page {{page_number}} of {{total_pages}}.</h6>
+
+            {% endif %}
+        </div>
         <div class="card-deck">
 
             <div class="row search-row justify-content-center">
@@ -179,7 +184,7 @@
 
                     {% if page_number == 1 %}
 
-                    <p class="disabled d-inline page-buttons ml-3"><i class="fas fa-backward"></i> Previous  </p>
+                    <p class="disabled d-inline page-buttons ml-3"><i class="fas fa-backward"></i> Previous </p>
 
                     {% elif page_number != 1 %}
 
@@ -187,7 +192,7 @@
 
                     {% endif %}
 
-{% if page_number == total_pages %}
+                    {% if page_number == total_pages %}
 
                     <p class="disabled d-inline page-buttons ml-3">Next <i class="fas fa-forward"></i></p>
 
@@ -195,7 +200,7 @@
                     <a href="{{next_url}}" class="page-buttons ml-3">Next <i class="fas fa-forward"></i> </a>
 
                     {% endif %}
-                
+
                 </div>
 
 
