--- a/static/css/main.css
+++ b/static/css/main.css
@@ -815,7 +815,7 @@ ul {
   transition: all 1s ease;
   width: 80vw;
   min-height: 100vh;
-  max-height: 160vh;
+  max-height: 180vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -925,6 +925,10 @@ ul ul a {
   }
 }
 
+.search-comm {
+  padding: 1rem;
+}
+
 .abc-checkbox {
   margin-bottom: 0.5rem;
 }
@@ -1004,7 +1008,7 @@ ul ul a {
 
 #content {
   width: 80%;
-  height: 160vh;
+  height: 200vh;
 }
 
 .search-row {
@@ -1065,6 +1069,18 @@ ul ul a {
 
 .results {
   margin: 4rem;
+}
+
+.paging {
+  margin-top: 3vh;
+}
+
+.skill-desc {
+  margin-left: 2vw;
+}
+
+.comm-desc {
+  margin-left: 1vw;
 }
 
 .logreg-wrapper {
