--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -14,7 +14,7 @@
 
         {% if active == 'search' %}
 
-        <button type="button" id="sidebarCollapse" class="btn btn-info">
+        <button type="button" id="sidebarCollapse" class="btn btn-info d-md-none">
             <i class="fas fa-align-left"></i>
             <span>Toggle Filters</span>
         </button>
