--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -85,8 +85,8 @@
 
 
 
-                    <select class="selectpicker districtSelect" id="districtSelect" name="district" multiple
-                        data-selected-text-format="count">
+                    <select class="selectpicker districtSelect" id="districtSelect" name="district">
+                        <option value="all" selected>All</option>
                         <option value="Mitte">Mitte</option>
                         <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
                         <option value="Pankow">Pankow</option>
@@ -101,8 +101,6 @@
                         <option value="Reinickendorf">Reinickendorf</option>
                     </select>
 
-
-                    <button class="refresh" id="districtRefresh"><i class="fas fa-times"></i></button>
                 </div>
 
             </div>
