--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -103,19 +103,11 @@
 
 
                     <select class="selectpicker districtSelect" id="districtSelect" name="district">
-                        <option value="all" selected>All</option>
-                        <option value="Mitte">Mitte</option>
-                        <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
-                        <option value="Pankow">Pankow</option>
-                        <option value="Charlottenburg">Charlottenburg-Wilmersdorf</option>
-                        <option value="Spandau">Spandau</option>
-                        <option value="Steglitz-Zehlendorf">Steglitz-Zehlendorf</option>
-                        <option value="Tempelhof-Schöneberg">Tempelhof-Schöneberg</option>
-                        <option value="Neukölln">Neukölln</option>
-                        <option value="Treptow-Köpenick">Treptow-Köpenick</option>
-                        <option value="Marzahn-Hellersdorf">Marzahn-Hellersdorf</option>
-                        <option value="Lichtenberg">Lichtenberg</option>
-                        <option value="Reinickendorf">Reinickendorf</option>
+                        {% for district in districts %}
+                        
+                        <option value="{{district}}">{{district}}</option>
+
+                        {% endfor %}
                     </select>
 
                 </div>
