--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -18,9 +18,11 @@
     width: 80vw;
     min-height: 100vh;
     max-height: 180vh;
+margin-left: 0;
 
     @media (min-width: $bp-mobile) {
         width: 60vw;
+        margin-left: 0;
     }
 
     @media (min-width: $bp-desktop) {
@@ -194,9 +196,17 @@ ul ul a {
     height: 200vh;
 }
 
+.content-visibility {
+    display: none;
+}
+
 .search-row {
     height: 50vh;
-    width: 50vw;
+    width: 100vw;
+
+    @media (min-width: $bp-mobile) {
+        width: 50vw;
+    }
 }
 
 .search-overlay {
@@ -269,4 +279,12 @@ ul ul a {
 
 .districtSelect {
     max-width: 15vw;
+}
+
+#search-deck {
+    margin-top: 10vh;
+}
+
+.deck-margin {
+    margin-left: 15vw;
 }
