--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -216,7 +216,7 @@
 
             {% endif %}
         </div>
-        <div class="card-deck">
+        <div class="card-deck" id="search-deck">
 
             <div class="row search-row justify-content-center">
 
@@ -248,14 +248,14 @@
 
 
                 {% if loop.index % 2 == 1 %}
-                <div class="col-12 col-md-6 d-none d-md-block justify-content-center mt-3">
+                <div class="col-6 justify-content-center mt-3">
                     {% include 'components/profile_card.html' %}
                 </div>
 
                 {% endif %}
 
                 {% if loop.index % 2 == 0 %}
-                <div class="col-12 col-md-6 justify-content-center mt-3">
+                <div class="col-6 justify-content-center mt-3">
                     {% include 'components/profile_card.html' %}
                 </div>
                 {% endif %}
@@ -268,9 +268,6 @@
     </div>
 
     <!-- End Content -->
-
-    <!-- Dark Overlay element -->
-    <div class="search-overlay"></div>
 
 
 </div>
