--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -22,7 +22,7 @@
 
 
             <h5 class="filter-header skills-header"><i class="fas fa-code"></i> Skills</h5>
-            <small class="skill-desc">tanDev will display users who know at least one skill selected.</small>
+            <div class="skill-desc"><small>tanDev will display users who know at least one skill selected.</small></div>
 
 
             <div class="row skill-column">
@@ -137,9 +137,9 @@
 
                     <div class="col-12">
 
-                        <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5> <small
-                            class="comm-desc"> tanDev will
-                            display users open to all the styles selected.</small>
+                        <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5> 
+                        <div class="comm-desc"><small> tanDev will
+                            display users open to all the styles selected.</small></div>
 
                     </div>
                 </div>
