--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -15,7 +15,7 @@
     padding-top: 2rem;
     transition: all 1s ease;
 
-    width: 80vw;
+    width: 0;
     min-height: 100vh;
     max-height: 180vh;
 margin-left: 0;
@@ -27,6 +27,7 @@ margin-left: 0;
 
     @media (min-width: $bp-desktop) {
         width: 35vw;
+        margin-left:0;
     }
 
 
@@ -49,15 +50,16 @@ margin-left: 0;
 }
 
 #sidebar.active {
-    margin-left: -80vw;
     transition: all 1s ease;
+    width: 100%;
 
     @media (min-width: $bp-mobile) {
-        margin-left: -60vw;
+        margin-left: 0;
+        width: 40%
     }
 
     @media (min-width: $bp-desktop) {
-        margin-left: -35vw;
+        margin-left: 0;
     }
 }
 
@@ -194,6 +196,10 @@ ul ul a {
 #content {
     width: 80%;
     height: 200vh;
+
+    @media (min-width: 521px) {
+        margin-left: 10vw;
+    }
 }
 
 .content-visibility {
@@ -279,6 +285,7 @@ ul ul a {
 
 .districtSelect {
     max-width: 15vw;
+    margin-top: 2vh;
 }
 
 #search-deck {
