Finish tweaking user_details. Add description fields to profile.

--- a/static/scss/_user_details.scss
+++ b/static/scss/_user_details.scss
@@ -61,48 +61,7 @@ display: flex;
 
 
 }
-[id="heart"] {
-    position: absolute;
-    left: -100vw;
-}
 
-[for="heart"] {
-    color: $lightblue !important;
-    cursor: pointer;
-    font-size: 6em;
-    align-self: center;
-    transition: color 0.2s ease-in-out;
-}
-
-[for="heart"]:hover {
-    color: grey !important;
-}
-
-[for="heart"]::selection {
-    color: none;
-    background: transparent;
-}
-
-[for="heart"]::moz-selection {
-    color: none;
-    background: transparent;
-}
-
-[id="heart"]:checked+label {
-    color: $pink !important;
-    will-change: font-size;
-    animation: heart 1s cubic-bezier(.17, .89, .32, 1.49);
-}
-
-
-
-@keyframes heart {
-
-    0%,
-    17.5% {
-        font-size: 0;
-    }
-}
 
 #preview {
     margin-bottom: 5vh !important;
@@ -168,6 +127,12 @@ margin-top: 10vh;
     color: white;
     margin-left: 0;
     margin-right: 0;
+}
+
+.description-row {
+    color: black !important;
+    min-height: 30vh;
+    max-height: auto;
 }
 
 .skill-row {
