--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -208,6 +208,15 @@
                 </div>
             </div>
 
+            <!-- DESCRIPTION SECTION -->
+
+            <div class="row">
+                <label class="profile-label" for="profile-description">
+                    Full Description
+                </label>
+                <textarea class="form-control" id="profile-description" name="description" rows="3" maxlength="500"
+                    rows="3" placeholder="Tell us about yourself! The more details you provide, the higher the chance that someone suitable will find you."></textarea>
+            </div>
 
             <!-- COMMUNICATION STYLE SECTION -->
 
