--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -77,6 +77,19 @@
             </div>
         </div>
 
+        <div class="row profile-row description-row justify-content-center align-items-center">
+            <div class="col-3">
+                <h5 class="d-inline">Description</h5>
+
+            </div>
+
+            <div class="col-9">
+
+                {{user.description}}
+
+            </div>
+        </div>
+
         <div class="row comm-row profile-row">
 
             <div class="col-3">
