--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1319,62 +1319,6 @@ ul ul a {
   display: flex;
 }
 
-[id="heart"] {
-  position: absolute;
-  left: -100vw;
-}
-
-[for="heart"] {
-  color: #B0C3D2 !important;
-  cursor: pointer;
-  font-size: 6em;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  -webkit-transition: color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
-}
-
-[for="heart"]:hover {
-  color: grey !important;
-}
-
-[for="heart"]::-moz-selection {
-  color: none;
-  background: transparent;
-}
-
-[for="heart"]::selection {
-  color: none;
-  background: transparent;
-}
-
-[for="heart"]::moz-selection {
-  color: none;
-  background: transparent;
-}
-
-[id="heart"]:checked + label {
-  color: #ee4266 !important;
-  will-change: font-size;
-  -webkit-animation: heart 1s cubic-bezier(0.17, 0.89, 0.32, 1.49);
-          animation: heart 1s cubic-bezier(0.17, 0.89, 0.32, 1.49);
-}
-
-@-webkit-keyframes heart {
-  0%,
-  17.5% {
-    font-size: 0;
-  }
-}
-
-@keyframes heart {
-  0%,
-  17.5% {
-    font-size: 0;
-  }
-}
-
 #preview {
   margin-bottom: 5vh !important;
 }
@@ -1497,6 +1441,12 @@ ul ul a {
   color: white;
   margin-left: 0;
   margin-right: 0;
+}
+
+.description-row {
+  color: black !important;
+  min-height: 30vh;
+  max-height: auto;
 }
 
 .skill-row {
